tags/release-0.65/docsrc/examples.rst

.. _examples:

Examples
========


.. _example.activelayers:

.. cssclass:: exampleblock example-activelayers

Active Layers Panel
-------------------
Select layers into a stack of active layers and change opacity/stacking.



.. _example.capabilitiestreepanel:

.. cssclass:: exampleblock example-capabilitiestreepanel

CapabilitiesTreePanel
---------------------
Populate a layer tree from a WMS GetCapabilties result.



.. _example.complexfeatures:

.. cssclass:: exampleblock example-complexfeatures

WFSViewer
---------
View complex feature data from a WFS (WORK IN PROGRESS !!).



.. _example.default:

.. cssclass:: exampleblock example-default

Default
-------
The default application using the default layout and options.



.. _example.embedded:

.. cssclass:: exampleblock example-embedded

Embedded
--------
Embed a Heron app within any page div element.



.. _example.floatingwindow:

.. cssclass:: exampleblock example-floatingwindow

Floating Window
---------------
Demonstrates Heron app within floating Ext JS Window.



.. _example.geoportal:

.. cssclass:: exampleblock example-geoportal

GeoPortal
---------
Use the MenuHandler to specify a complete portal website with content pages.



.. _example.inspire:

.. cssclass:: exampleblock example-inspire

INSPIRE
-------
Visualize INSPIRE layers with a custom LayerTree for INSPIRE data themes.



.. _example.layertree:

.. cssclass:: exampleblock example-layertree

LayerTree
---------
Build a custom layer tree for base layers and thematic overlays.



.. _example.minimal:

.. cssclass:: exampleblock example-minimal

Minimal
-------
The "Hello World" app, the most minimal config to define a Heron app.



.. _example.namesearch:

.. cssclass:: exampleblock example-namesearch

Name Search
-----------
Name search ala google suggest and zoom via OpenStreetMap Nominatim search.



.. _example.nolaunch:

.. cssclass:: exampleblock example-nolaunch

NoLaunch
--------
Take control over Heron initialization using the NoLaunch.js import.



.. _example.searchpanel:

.. cssclass:: exampleblock example-searchpanel

Search Panel
------------
Create a custom search panel with backend (exact) WFS search and zoom to result.



.. _example.toolbar-item:

.. cssclass:: exampleblock example-toolbar-item

Extend Map Toolbar
------------------
Extend the toolbar with your own custom item and handler.


